add call to third-party service